[tool.poetry]
name = "agent-scheduler"
version = "0.1.0"
description = "Schedules agents in a distributed blockchain based super-network to, mainly improve true open AIs (in contrast to companies like Closed AI)"
authors = ["Zak <hakzarov@gmail.com>"]
readme = "README.md"
packages = [{include = "agent_scheduler"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
